--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="4CmWgbG9aSHVLAGlT0OIzHlYmW6iAornccDz2u6SHBY" />
+<meta name="google-site-verification" content="BWA7g4ILF4n-rdJ3Uf8W4dUAa9TrAXs68I4-NJTHMC8" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="title" content="What Should You Consider Before Hiring Interior Painting Services for Your Home?">
@@ -123,7 +123,7 @@
   <!-- Ask About Paint Types Section -->
   <div class="container section">
     <h2>5. Ask About the Types of Paint They Use</h2>
-    <p>The type of paint used can make a significant difference in the durability and appearance of the final result.<strong><a href="https://maps.app.goo.gl/AysVhx6paoCBQRrc7">Painter in Fresno CA</a></strong> Quality paint can last longer, look more vibrant, and resist fading or peeling over time. Ask the interior painting services in Fresno CA</strong> about the brands they use and whether they offer eco-friendly or low-VOC (volatile organic compound) options. These types of paints are not only better for the environment but also healthier for your indoor air quality.</p>
+    <p>The type of paint used can make a significant difference in the durability and appearance of the final result.<strong><a href="https://robrt-parker1.github.io/ever-painting/">Painter in Fresno CA</a></strong> Quality paint can last longer, look more vibrant, and resist fading or peeling over time. Ask the interior painting services in Fresno CA</strong> about the brands they use and whether they offer eco-friendly or low-VOC (volatile organic compound) options. These types of paints are not only better for the environment but also healthier for your indoor air quality.</p>
   </div>
 
   <!-- Review Portfolio Section -->
